# kinos

./: .env.example  .gitignore  .gitmodules  4. `kinos_cli.py  5. Update `requirements.txt  ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION.md  EVALUATION.md  README.md  SPECIFICATION.md  __init__.py  agent_panel.py  agents.py  aider_agent.py  collapsible_section.py  config.py  contexte_agent.py  database.py  demande.md  demande_parallagon.md  evaluation.md  evaluation_agent.py  file_manager.py  gui_config.py  install.bat  install.sh  kin  kin.bat  kinos_cli.py  kinos_web.py  llm_service.py  log_manager.py  main.py  management.md  management_agent.py  map (readonly).md  map.md  mission_service.py  package-lock.json  (+25 more)
1. `utils/: logger.py  path_manager.py
1. config/: missions.json
2. `utils/: exceptions.py
3. `config/: cli_config.py
SEARCH/: REPLACE block
agents/: __init__.py  agent_types.py  kinos_agent.py  parallagon_agent.py
chats/: chroniqueur.md  documentaliste.md  duplication.md  evaluation.md  management.md  redacteur.md  redacteur2.md  redacteur3.md  redondance.md  specifications.md  validation.md
config/: __init__.py  agent_intervals.json  global_config.py  missions.json  perplexity_config.json
docs/: ARCHITECTURE.md  CLI.md  DOCUMENTATION.md  EVALUATION.md  FILE_PATHS.md  INTERACTIVE.md  REX.md  SERVICES.md  SPECIFICATION.md  SPECIFICATIONS.md
managers/: agent_runner.py  agents_manager.py  aider_manager.py  interactive_manager.py  map_manager.py  map_manager.py_bak  objective_manager.py  redundancy_manager.py  vision_manager.py
prompts/: contexte.md  (+20 more)
(+169 files in other folders)
