[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kinos"
version = "0.1.0"
description = "KinOS - Autonomous Agent Framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pyyaml",
    "pathlib",
    "logging"
]

[project.scripts]
kinos = "kinos_cli:main"
